--- a/web/appraisal/templates/appraisal/modals_photo.html
+++ b/web/appraisal/templates/appraisal/modals_photo.html
@@ -39,7 +39,7 @@
 				</script>
 	  		</div>
 	  		<div class="modal-footer">
-	  			<input class="appraisal_id" name="appraisal_id" type="hidden" value="0">
+	  			<input id="photo_id" class="appraisal_id" name="appraisal_id" type="hidden" value="0">
 	    		<input class="photo_id" name="photo_id" type="hidden" value="0">
 	    		<button type="button" class="btn btn-secondary" data-dismiss="modal">
 	    			Cerrar
