--- a/web/appraisal/templates/appraisal/annex.html
+++ b/web/appraisal/templates/appraisal/annex.html
@@ -1,91 +1,70 @@
 <div class="row mt-4 ml-4 mr-4">
   <div class="col">
 
-<h5>Fotografías</h5>
+    <h5>Fotografías</h5>
 
-<!-- Form to insert a picture -->
-<div class="row">
+    <!-- Form to insert a picture -->
+    <div class="row">
 
-  {% for photo in appraisal.photos.all %}
-  <div id="photo_container_{{photo.id}}">
-    {% include 'appraisal/annex_photo.html' %}
-  </div>
-  {% endfor %}
+      {% for photo in appraisal.photos.all %}
+      <div id="photo_container_{{photo.id}}">
+        {% include 'appraisal/annex_photo.html' %}
+      </div>
+      {% endfor %}
 
-</div>
-
-</div>
-</div>
-
-
-<h5>Documentos</h5>
-
-<!-- Form to insert a document -->
-{% if not appraisal.finished %}
-<div class="form-group row mb-4">
-  <div class="col-md-4">
-    <div class="custom-file">
-      {{forms.documents.documents}}
-      <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo</label>
     </div>
-  </div>
-  <div class="col-md-4">
-    {{forms.documents.description}}
-  </div>
-  <div class="col-md">
-    <button name='btn_upload_document' class="btn btn-primary">Agregar documento</button>
+
   </div>
 </div>
 
-<script>
-  $('#id_documents').change(function() {
-    //var i = $(this).prev('label').clone();
-    var filesn = $('#id_documents')[0].files.length
-    if (filesn == 1) {
-      var file = $('#id_documents')[0].files[0].name;
-      $('.custom-file-label').text(file);
-    } else {
-      $('.custom-file-label').text(filesn+' archivos');
-    }
-  });
-</script>
-{% endif %}
+<div class="row mt-4 ml-4 mr-4">
+  <div class="col">
 
-<!-- Documents -->
-<div class="container-fluid">
-  <div class="row">
-    {% for document in appraisal.documents.all %}
-    <div class="card mr-2 mb-2" style="width: 16rem;">
-      <a class="document_show" data-url="{{document.photo.url}}" data-id="{{document.id}}">
-        <img class="card-img-top" src="{{settings.MEDIA_ROOT}}{{document.thumbnail.url}}"/>
-      </a>
-      <div class="card-body">
-        <input name="document_description_{{document.id}}" class="form-control form-control-sm in_description" style="display:none;">
-        <p class="card-title description">
-          {{document.description}}
-        </p>
-        <p class="card-text" style="text-align:right">
-          <a class="btn btn-sm document_show" data-url="{{document.document.url}}" data-id="{{document.id}}">
-            <i class="material-icons">zoom_in</i>
-          </a>
-          {% if not appraisal.finished %}
-          <button type="button" class="btn btn-sm edit_document" style="padding:0px; border:0px;">
-            <i class="material-icons">edit</i>
-          </button>
-          <button name="btn_save_document" value="{{document.id}}" class="btn btn-sm save_document" style="padding:0px; border:0px; display:none;">
-            <i class="material-icons">save</i>
-          </button>
-          <button name="btn_delete_document" value="{{document.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
-            <i class="material-icons">delete</i>
-          </button>
-          {% endif %}
-        </p>
+    <h5>Documentos</h5>
+
+    <script>
+      $('#id_documents').change(function() {
+        //var i = $(this).prev('label').clone();
+        var filesn = $('#id_documents')[0].files.length
+        if (filesn == 1) {
+          var file = $('#id_documents')[0].files[0].name;
+          $('.custom-file-label').text(file);
+        } else {
+          $('.custom-file-label').text(filesn+' archivos');
+        }
+      });
+    </script>
+
+    <!-- Documents -->
+    <div class="row">
+      
+      {% for document in appraisal.documents.all %}
+      <div id="document_container_{{document.id}}">
+        {% include 'appraisal/annex_document.html' %}
+      </div>
+      {% endfor %}
+    </div>
+
+    <!-- Form to insert a document -->
+    {% if not appraisal.finished %}
+    <div class="form-group row mb-4">
+      <div class="col-md-4">
+        <div class="custom-file">
+          {{forms.documents.documents}}
+          <label class="custom-file-label" for="validatedCustomFile">Seleccionar archivo</label>
+        </div>
+      </div>
+      <div class="col-md-4">
+        {{forms.documents.description}}
+      </div>
+      <div class="col-md">
+        <button name='btn_upload_document' class="btn btn-primary">Agregar documento</button>
       </div>
     </div>
-    {% endfor %}
+    {% endif %}
+
   </div>
 </div>
-
 
 <script>
 // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -170,9 +149,8 @@
       event.preventDefault()
       var url = "{% url 'ajax_photo_save_url' %}";
       var form = document.getElementById("form_photo");
-      console.log(form)
       var form_data = new FormData(form);
-      console.log(form_data)
+      var photo_id = $("#photo_id").val()
       $.ajax({
         url: url,
         type: 'post',
@@ -184,6 +162,9 @@
         },
         success: function(data) {
           $('#modal_photo').modal('hide');
+          console.log(photo_id)
+          console.log($('#photo_container_'+photo_id))
+          $('#photo_container_'+photo_id).html($.trim(data))
         }
       });
     })
